--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "rimraf": "2.7.1",
     "tslint": "5.20.1",
     "typescript": "2.9.2"
+  },
+  "dependencies": {
+    "@akashic-extension/akashic-label": "^2.0.7",
+    "@types/node": "^13.1.8"
   }
 }
