--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-game-sample",
+  "name": "turitoomo",
   "private": true,
   "version": "0.1.0",
   "description": "",
@@ -20,13 +20,13 @@
     "@akashic/akashic-cli-scan": "~0.2.6",
     "@akashic/akashic-engine": "~2.4.11",
     "@akashic/akashic-sandbox": "~0.13.55",
+    "@types/node": "^13.1.8",
     "jest": "24.9.0",
     "rimraf": "2.7.1",
     "tslint": "5.20.1",
-    "typescript": "2.9.2"
+    "typescript": "3.7.5"
   },
   "dependencies": {
-    "@akashic-extension/akashic-label": "^2.0.7",
-    "@types/node": "^13.1.8"
+    "@akashic-extension/akashic-label": "^2.0.7"
   }
 }
