--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES5",
-    "lib": ["es5"],
+    "lib": [
+      "es5"
+    ],
     "noImplicitAny": true,
-    "module": "commonjs" ,
+    "module": "commonjs",
     "outDir": "./script",
-    "types" : []
+    "types": [ ]
   },
   "files": [
     "node_modules/@akashic/akashic-engine/lib/main.d.ts"
