釣ったときに角度を入れるように

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES5",
     "lib": [
-      "es5"
+      "es5","DOM"
     ],
     "noImplicitAny": true,
     "module": "commonjs",
